tests/syntax_error/too_many_opening_parens.jou
# As usual, I try to point the error at the first line where
# things go wrong. In this case that means the first unbalanced
# paren token.

bar(    # Error: '(' without a matching ')'
    (blah)
    (blah)
    (
        blaah blah
